# co_2

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  ble_client.py  co2_gui.py  co2_monitor.py  sdkconfig  sdkconfig.defaults
.cargo/: config.toml
main/: CMakeLists.txt  idf_component.yml  led_strip_app.c  led_strip_app.h  main.c  mhz19.c  mhz19.h  wifi_app.c  wifi_app.h
src/: ble.rs  led_status.rs  main.rs  mhz19.rs  wifi.rs
