[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[package]
name = "co2measure"
version = "0.1.0"
authors = ["Rayi CHEN <634274151@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"



[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"


[dependencies]
log = "0.4"
anyhow = "1.0"
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", features = ["rmt-legacy"] }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
smart-leds = "0.4.0"

[build-dependencies]
embuild = "0.33"
